--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -16,7 +16,7 @@
         android:textSize="30sp"
         android:textStyle="bold"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp" />
+        android:layout_marginTop="100dp" />
 
     <!-- Day of the Week -->
     <TextView
@@ -47,16 +47,16 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/dayOfWeek"
         android:layout_margin="20dp"
-        android:columnCount="2"
+        android:columnCount="1"
         android:rowCount="1">
 
-        <!-- Card for Upcoming Appointment -->
         <androidx.cardview.widget.CardView
             android:id="@+id/cardUpcomingAppointment"
             android:layout_width="0dp"
             android:layout_height="150dp"
             android:layout_margin="8dp"
             android:layout_columnWeight="1"
+            android:layout_marginTop="30dp"
             app:cardBackgroundColor="@color/white"
             app:cardCornerRadius="8dp"
             app:cardElevation="8dp">
@@ -75,16 +75,27 @@
                     android:textStyle="bold"
                     android:gravity="center"
                     android:textColor="@color/black" />
+
+                <!-- Detajet e Takimit (data dhe përshkrimi) -->
+                <TextView
+                    android:id="@+id/appointmentDetails"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Upcoming Appointment: Janar 03, 2025"
+                    android:textSize="14sp"
+                    android:textColor="@color/black"
+                    android:layout_marginTop="10dp"
+                    android:gravity="center" />
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
-        <!-- Card for Take Medication -->
         <androidx.cardview.widget.CardView
             android:id="@+id/cardTakeMedication"
             android:layout_width="0dp"
             android:layout_height="150dp"
             android:layout_margin="8dp"
             android:layout_columnWeight="1"
+            android:layout_marginTop="30dp"
             app:cardBackgroundColor="@color/white"
             app:cardCornerRadius="8dp"
             app:cardElevation="8dp">
@@ -103,8 +114,20 @@
                     android:textStyle="bold"
                     android:gravity="center"
                     android:textColor="@color/black" />
+
+                <!-- Detajet e Barnave (Koha kur duhet marrë dhe emri) -->
+                <TextView
+                    android:id="@+id/medicationDetails"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Take Medication: Morning and Evening"
+                    android:textSize="14sp"
+                    android:textColor="@color/black"
+                    android:layout_marginTop="10dp"
+                    android:gravity="center" />
             </LinearLayout>
         </androidx.cardview.widget.CardView>
+
     </GridLayout>
 
 </RelativeLayout>
