--- a/app/src/main/res/layout/activity_take.xml
+++ b/app/src/main/res/layout/activity_take.xml
@@ -1,11 +1,45 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="16dp">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewMedications"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1" />
+
+    <EditText
+        android:id="@+id/editTextMedicationName"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Manage Your Medications"
-        android:layout_centerInParent="true"
-        android:textSize="20sp" />
-</RelativeLayout>
+        android:hint="Enter medication name" />
+
+    <EditText
+        android:id="@+id/editTextMedicationDosage"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Enter dosage" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center">
+
+        <Button
+            android:id="@+id/buttonAddMedication"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Add" />
+
+        <Button
+            android:id="@+id/buttonUpdateMedication"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Update"
+            android:visibility="gone" />
+    </LinearLayout>
+</LinearLayout>
