--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -23,7 +23,7 @@
                 android:layout_width="350dp"
                 android:layout_height="60dp"
                 android:id="@+id/signup_email"
-                android:background="@drawable/lavander_border"
+                android:background="@drawable/blue_border"
                 android:layout_marginTop="30dp"
                 android:padding="8dp"
                 android:hint="Email"
@@ -35,7 +35,7 @@
                 android:layout_width="350dp"
                 android:layout_height="60dp"
                 android:id="@+id/signup_password"
-                android:background="@drawable/lavander_border"
+                android:background="@drawable/blue_border"
                 android:layout_marginTop="30dp"
                 android:padding="8dp"
                 android:hint="Password"
@@ -48,7 +48,7 @@
                 android:layout_width="350dp"
                 android:layout_height="60dp"
                 android:id="@+id/signup_repeatpassword"
-                android:background="@drawable/lavander_border"
+                android:background="@drawable/blue_border"
                 android:layout_marginTop="30dp"
                 android:padding="8dp"
                 android:hint="Repeat Password"
