--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,8 +3,8 @@
     <style name="Base.Theme.MedicalApplication_PaisjeMobile" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
-        <item name="colorPrimary" >@color/lavander</item>
-        <item name="colorPrimaryVariant">@color/lavander</item>
+        <item name="colorPrimary" >@color/blue</item>
+        <item name="colorPrimaryVariant">@color/blue</item>
     </style>
 
     <style name="Theme.MedicalApplication_PaisjeMobile" parent="Base.Theme.MedicalApplication_PaisjeMobile" />
