--- a/app/src/main/res/drawable/blue_border.xml
+++ b/app/src/main/res/drawable/blue_border.xml
@@ -2,9 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="100dp" />
-    <stroke android:color="@color/lavander"
-        android:width="2dp"/>
-    <solid android:color="@color/white"/>
-
-
+    <stroke android:color="@color/blue" android:width="2dp"/>
+    <solid android:color="@android:color/white"/>  <!-- Përdor ngjyrë të bardhë për brendësi -->
 </shape>
