--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -27,7 +27,7 @@
                     android:layout_width="350dp"
                     android:layout_height="60dp"
                     android:layout_marginTop="30dp"
-                    android:background="@drawable/lavander_border"
+                    android:background="@drawable/blue_border"
                     android:drawableLeft="@drawable/baseline_email_24"
                     android:drawablePadding="8dp"
                     android:hint="Email"
@@ -37,7 +37,7 @@
                     android:layout_width="350dp"
                     android:layout_height="60dp"
                     android:layout_marginTop="20dp"
-                    android:background="@drawable/lavander_border"
+                    android:background="@drawable/blue_border"
                     android:drawableLeft="@drawable/baseline_lock_24"
                     android:drawablePadding="8dp"
                     android:hint="Password"
@@ -59,7 +59,7 @@
                     android:layout_marginTop="14dp"
                     android:padding="8dp"
                     android:text="Not yet registered? Signup"
-                    android:textColor="@color/lavander"
+                    android:textColor="@color/blue"
                     android:textSize="18sp" />
             </LinearLayout>
         </LinearLayout>
