--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="lavander">#8692F7</color>
+    <color name="blue">#007BFF</color>  <!-- Shto ngjyrën e kaltrtë -->
 </resources>
