--- a/app/src/main/res/layout/activity_upcoming.xml
+++ b/app/src/main/res/layout/activity_upcoming.xml
@@ -6,6 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".UpcomingAppointmentActivity">
 
+    <!-- ListView për shfaqjen e appointments -->
+    <ListView
+        android:id="@+id/appointmentListView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@id/fab"
+        android:padding="16dp"
+        android:divider="@android:color/darker_gray"
+        android:dividerHeight="1dp" />
+
+    <!-- FloatingActionButton për shtimin e appointments -->
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -15,9 +26,6 @@
         android:layout_margin="40dp"
         android:src="@drawable/baseline_add_24"
         android:backgroundTint="@color/blue"
-        app:tint="@color/white">
-
-    </com.google.android.material.floatingactionbutton.FloatingActionButton>
-
+        app:tint="@color/white" />
 
 </RelativeLayout>
