ndryshime te vogla

--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -23,7 +23,7 @@ tools:context=".HomeActivity">
     android:id="@+id/dayOfWeek"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="Today is Monday"
+    android:text="Today is Tuesday"
     android:textColor="@color/black"
     android:textSize="20sp"
     android:layout_below="@id/titleHome"
@@ -84,8 +84,8 @@ tools:context=".HomeActivity">
                 android:id="@+id/appointmentDetails"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Upcoming Appointment: Janar 03, 2025"
                 android:textSize="14sp"
+                android:text="Your Appointments"
                 android:textColor="@color/black"
                 android:layout_marginTop="10dp"
                 android:gravity="center" />
@@ -123,7 +123,7 @@ tools:context=".HomeActivity">
                 android:id="@+id/medicationDetails"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Take Medication: Morning and Evening"
+                android:text="Your medication"
                 android:textSize="14sp"
                 android:textColor="@color/black"
                 android:layout_marginTop="10dp"
